# GScript

./: AST.c  AST.h  CMakeLists.txt  INDEX.md  README.md  WIP.md  debug.c  debug.h  entry.gs  exception.c  exception.h  io.c  io.h  lexer.c  lexer.h  main  main.c  notes.txt  parser.c  parser.h  scope.c  scope.h  stddefs.gs  token.c  token.h  visitor.c  visitor.h
core/: lexer.c  lexer.h  parser.c  parser.h  scope.c  scope.h  visitor.c  visitor.h
extra/: exception.c  exception.h  stdfunc.c  stdfunc.h
gs-entry/: burak.gs  entry.gs
gs-libs/: builtin_list.gs  builtin_math.gs  builtin_string.gs  common.gs
struct/: AST.c  AST.h  token.c  token.h
util/: debug.c  debug.h  defs.h  io.c  io.h  management.c  management.h  test.c  test.h
